Removed pictures and cleaning up files

--- a/index.html
+++ b/index.html
@@ -24,29 +24,20 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/contact.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/contact.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          About Us
-        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#band-members">Band Members</a>
-                            <a class="dropdown-item" href="#songs">Songs</a>
-                            <a class="dropdown-item" href="#videos">Videos</a>
-                            <a class="dropdown-item" href="#photos">Photos</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/about.html">About Us<span class="sr-only">(current)</span></a>
                     </li>
-                    </div>
+
                 </ul>
             </div>
         </nav>
     </header>
 
-    <div class="container-fluid callout-container"
-        <div class="opaque-overlay">&nbsp;</div>
-        <div class="row">
-            <div class="col-12">
-            </div>
+    <div class="container-fluid callout-container" <div class="opaque-overlay">&nbsp;</div>
+    <div class="row">
+        <div class="col-12">
         </div>
+    </div>
     </div>
 
 
@@ -72,12 +63,6 @@
                     <a target="_blank" href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck?autoplay=true&v=A">
                             <i class="fa fa-spotify" aria-hidden="true"></i>
                             <span class="sr-only">Spotify</span>
-                        </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.instagram.com/themonkees/">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
                         </a>
                 </li>
                 <li class="list-inline-item">
