--- a/about.html
+++ b/about.html
@@ -45,19 +45,21 @@
         <div class="container members-container">
             <div class="row">
                 <div class="col-12">
-                    <a name="band-members"><h1 class="jumbotron-header">Band Members</h1></a>
+                    <a name="band-members">
+                        <h1 class="jumbotron-header">Band Members</h1>
+                    </a>
                     <hr class="block-divider">
 
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/dj.jpg" class="rounded-circle mr-3" height=150 width=190>
+                            <img src="/assets/images/dj.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>Guitar</p>
-                                <p>Davy Jones</p>
+                                <p class="member-name">Davy Jones</p>
+                                <p class="member-text">Born in December 1945, Dany was best known for lead vocals on many of The Monkees records. Jones also used to play the Bass when Tork was on the keyboard.</p>
                             </blockquote>
                         </div>
                     </div>
@@ -65,12 +67,12 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/mn.jpg" class="rounded-circle mr-3" height=150 width=190>
+                            <img src="/assets/images/mn.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>Guitar</p>
-                                <p>Michael Nesmith</p>
+                                <p class="member-name">Michael Nesmith</p>
+                                <p class="member-text">Born in December 1942, he was known as the guy with "a wool hat" for wearing it to his audition, Michael used a 12-string electric guitar as part of The Monkees</p>
                             </blockquote>
                         </div>
                     </div>
@@ -78,12 +80,12 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/pt.jpg" class="rounded-circle mr-3" height=150 width=190>
+                            <img src="/assets/images/pt.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>Guitar</p>
-                                <p>Peter Tork</p>
+                                <p class="member-name">Peter Tork</p>
+                                <p class="member-text">Born in February 1942, Peter was well know for having a very diverse skill set and played keyboards, bass guitar, banjo and other instruments in their recordings.</p>
                             </blockquote>
                         </div>
                     </div>
@@ -91,12 +93,12 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/md.jpg" class="rounded-circle mr-3" height=150 width=190>
+                            <img src="/assets/images/md.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>Drums</p>
-                                <p>Micky Dolenz</p>
+                                <p class="member-name">Micky Dolenz</p>
+                                <p class="member-text">Born in December 1942, Micky was the drummer and one of the lead vocalist for the band. He learned to play the drums right-handed and left-footed because of a leg disease called Perthes making his right leg weak.</p>
                             </blockquote>
                         </div>
                     </div>
@@ -110,7 +112,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <a name="songs"><h1 class="jumbotron-header">Songs</h1></a>
+                    <a name="songs">
+                        <h1 class="jumbotron-header">Songs</h1>
+                    </a>
                     <hr class="block-divider-songs">
                 </div>
             </div>
@@ -142,7 +146,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <a name="videos"><h1 class="jumbotron-header">Videos</h1></a>
+                    <a name="videos">
+                        <h1 class="jumbotron-header">Videos</h1>
+                    </a>
                     <hr class="block-divider">
                     <p class="video-song">Daydream Believer - 1968</p>
                     <video controls poster="/assets/images/album2.jpg">
@@ -153,49 +159,12 @@
         </div>
     </div>
 
-    <div class="container-wrapper container-wrapper--yellow">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <a name="photos"><h1 class="jumbotron-header">Photos</h1></a>
-                    <hr class="block-divider-songs">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="/assets/images/cover.jpg" class="d-block w-60" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="/assets/images/cover1.jpg" class="d-block w-60" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="/assets/images/cover3.jpg" class="d-block w-60" alt="...">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+
 
     <footer class="container-fluid bg-color-footer">
 
         <div class="col" id="footer-description">
-            <ul class="list-inline social-links style="
-    margin-top: 0px;">
+            <ul class="list-inline social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/TheMonkees">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -212,12 +181,6 @@
                     <a target="_blank" href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck?autoplay=true&v=A">
                             <i class="fa fa-spotify" aria-hidden="true"></i>
                             <span class="sr-only">Spotify</span>
-                        </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.instagram.com/themonkees/">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
                         </a>
                 </li>
                 <li class="list-inline-item">
