--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="/style/style.css" type="text/css" />
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
     <title>The Monkees</title>
 </head>
 
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/contact.html">Contact Us<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/about.html">About Us<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="about.html">About Us<span class="sr-only">(current)</span></a>
                     </li>
 
                 </ul>
