--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/dj.jpg" class="bandmember-picture mr-3">
+                            <img src="assets/images/dj.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -66,7 +66,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/mn.jpg" class="bandmember-picture mr-3">
+                            <img src="assets/images/mn.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -79,7 +79,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/pt.jpg" class="bandmember-picture mr-3">
+                            <img src="assets/images/pt.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -92,7 +92,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="/assets/images/md.jpg" class="bandmember-picture mr-3">
+                            <img src="assets/images/md.jpg" class="bandmember-picture mr-3">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -122,20 +122,20 @@
 
                     <p class="text-song">Last Train To Clarksville - 1966</p>
                     <audio controls>
-                        <source src="/assets/audio/Clarksville.mp3">
+                        <source src="assets/audio/Clarksville.mp3">
                     </audio>
                     <p class="text-song">I'm a Believer - 1966</p>
                     <audio controls>
-                        <source src="/assets/audio/ImABeliever.mp3">
+                        <source src="assets/audio/ImABeliever.mp3">
                     </audio>
                     <p class="text-song">Steppin' Stone - 1967</p>
                     <audio controls>
-                        <source src="/assets/audio/SteppingStone.mp3">
+                        <source src="assets/audio/SteppingStone.mp3">
                     </audio>
 
                 </div>
                 <div class="col-6 d-none d-sm-block">
-                    <img src="/assets/images/monkees-com-header-logo.png" width=373 height=300>
+                    <img src="assets/images/monkees-com-header-logo.png" width=373 height=300>
                 </div>
             </div>
         </div>
@@ -150,8 +150,8 @@
                     </a>
                     <hr class="block-divider">
                     <p class="video-song">Daydream Believer - 1968</p>
-                    <video controls poster="/assets/images/album2.jpg">
-                        <source src="/assets/video/TheMonkees.mp4">
+                    <video controls poster="assets/images/album2.jpg">
+                        <source src="assets/video/TheMonkees.mp4">
                     </video>
                 </div>
             </div>
