Problem with the image on landing page

--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
         </nav>
     </header>
 
-    <div class="container-fluid callout-container" <div class="opaque-overlay">&nbsp;</div>
-    <div class="row">
-        <div class="col-12">
-        </div>
-    </div>
-    </div>
-
-
-
+    <img src="assets/images/monkees.jpg" class="container-fluid callout-container">
+    <div class="opaque-overlay">&nbsp;</div>
 
     <footer class="container-fluid bg-color-footer">
 
